--- a/style.css
+++ b/style.css
@@ -12,14 +12,17 @@ body {
   margin: 0 auto;
 }
 
+/* CADA PÁGINA */
 .page {
+  width: 400px;
+  height: 500px;
   background: white;
   border: 1px solid #000;
-  font-size: 2em;
 
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 2em;
 }
 
 .controls {
@@ -29,5 +32,4 @@ body {
 button {
   padding: 10px 20px;
   font-size: 16px;
-  cursor: pointer;
 }
