--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   background: #e6e6e6;
-  font-family: 'Gelasio', serif;
+  font-family: 'Baloo 2', sans-serif;
   overflow: hidden;
 }
 
@@ -60,19 +60,20 @@ body {
   object-fit: cover;
 }
 
-/* FRASE CENTRAL EN GRANDE */
+/* FRASE CENTRAL EN GRANDE Y MÁS ARRIBA */
 .frase-central {
   position: absolute;
   z-index: 2;
-  top: 50%;
+  top: 25%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -25%);
   font-size: 36px;
-  font-weight: bold;
+  font-weight: 600;
   color: black;
   text-align: center;
   padding: 20px;
   max-width: 80%;
+  line-height: 1.2;
 }
 
 /* IMAGEN SUPERPUESTA CENTRADA */
@@ -82,6 +83,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 200px; /* tamaño ajustado */
+  width: 200px;
   height: auto;
 }
