--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   color: black;
   font-size: 18px;
   line-height: 1.6;
-  text-align: center;       /* centrado */
+  text-align: center;
   font-family: 'Baloo 2', sans-serif;
   max-width: 80%;           
 }
@@ -31,12 +31,13 @@
   font-family: 'Baloo 2', sans-serif;
 }
 
-/* Sticker en página 6 */
+/* Sticker en página 6 centrado exacto */
 .imagen-superpuesta {
   position: absolute;
   z-index: 2;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); /* centro exacto */
   max-width: 60%;
+  height: auto;
 }
